--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -7,6 +7,24 @@ html, body {
 	font-family: 'Raleway', sans-serif;
 }
 
+.toolbar-link {
+    color: rgba(255,255,255,0.7);
+    padding: 24px;
+    text-decoration: none;
+}
+
+.toolbar-link:hover {
+    color: rgba(255,255,255,1.0);
+}
+
+.mdc-card__primary.flexed {
+    display: flex;
+    justify-content: space-between;
+}
+.mdc-card__actions.reversed {
+    flex-direction: row-reverse;
+}      
+
 .full {
 	width: 100%;
 	height: 100%;
@@ -31,6 +49,10 @@ html, body {
 .center {
 	margin: auto 0;
 	border: 0px white solid;
+}
+
+#toolbar-icon {
+	font-size: 4em;
 }
 
 #banner-text {
