--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -44,19 +44,55 @@ html, body {
 	background-position: 0;
 	background-repeat: no-repeat;
 	background-size: cover;
+	z-index: 1;
 }
 
 .center {
-	margin: auto 0;
 	border: 0px white solid;
 }
 
+.back-panel {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	top:0;bottom:0;left:0;right:0;
+	z-index: -1;
+}
+
 #toolbar-icon {
-	font-size: 4em;
+	font-size: 3.5em;
+}
+
+#but-1:hover {
+	cursor: pointer;
 }
 
 #banner-text {
 	padding-left: 10%;
 	color: white;
-	font-size: 5em;
+	font-size: 8em;
+}
+
+#banner-text h1 {
+	margin-top: 0;
+}
+
+#switch {
+	position: absolute;
+	height: 10%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	bottom: 5%;
+}
+
+#switch img {
+	height: 100%;
+	width: auto;
+}
+
+#switch img:hover {
+	cursor: pointer;
 }
