--- a/testadministrator/public/css/styles.css
+++ b/testadministrator/public/css/styles.css
@@ -1,42 +1,105 @@
 .answers li { 
-list-style: upper-alpha; 
+	list-style: upper-alpha; 
 } 
+
+html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	font-family: 'Lato', sans-serif;
+}
+
+.toolbar-link {
+    color: rgba(255,255,255,0.7);
+    padding: 24px;
+    text-decoration: none;
+}
+
+.toolbar-link:hover {
+    color: rgba(255,255,255,1.0);
+}
+
+.mdc-card__primary.flexed {
+    display: flex;
+    justify-content: space-between;
+}
+.mdc-card__actions.reversed {
+    flex-direction: row-reverse;
+}      
+
+.full {
+	width: 100%;
+	height: 100%;
+}
+
+.no-js #loader { display: none; }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	display: none;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(../imgs/Preloader_3.gif) center no-repeat #fff;
+}
 
 label { 
-margin-left: 0.5em; 
-cursor: pointer; 
+	margin-left: 0.5em; 
+	cursor: pointer; 
 } 
 
-#results { 
-background: #dddada; 
-color: 000000; 
-padding: 3px; 
-text-align: center; 
-width: 200px; 
-cursor: pointer; 
-border: 1px solid gray; 
+.test {
+	height: 100%;
+	width: 90%;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 }
 
-#results:hover { 
-background: #3d91b8; 
-color: #ffffff; 
-padding: 3px; 
-text-align: center; 
-width: 200px; 
-cursor: pointer; 
-border: 1px solid gray; 
-} 
-
-#categorylist { 
-margin-top: 6px; 
-display: none; 
-} 
-
-#category1, #category2, #category3, #category4, #category5, #category6, #category7, #category8, #category9, #category10, #category11 { 
-display: none; 
+.question, .answer {
+	margin: 0;
 }
 
-#closing {
-display: none;
-font-style: italic;
+#ready {
+	width: 20%;
+	height: 20%;
+	font-size: 3em;
+	margin-left: 45%;
+	border-radius: 50%;
+}
+
+#submit {
+	position: fixed;
+	right:5%;
+	width: 15%;
+	height: 10%;
+	font-size: 1.5em;
+	top:50%;
+}
+
+#result {
+	font-family: 'Roboto', sans-serif;
+	position: absolute;
+	top: 40%;
+	left: 40%;
+	width: 20%;
+	display: block;
+	background: #cd5c3a; 
+	color: #ffffff; 
+	padding: 3px; 
+	font-size: 5em;
+	font-weight: 150;
+	text-align: center; 
+} 
+
+#resulttext {
+	position: absolute;
+	top: 65%;
+	left: 33%;
+	width: 40%;
+	display: block;
+	color: #cd5c3a;
+	font-size: 2em;
 }
