--- a/webapp/styles/main.css
+++ b/webapp/styles/main.css
@@ -37,6 +37,14 @@ html, body {
 	height: 100%;
 }
 
+.hidden-1, .hidden-2 {
+}
+
+
+#bu, #neu {
+	cursor: pointer;
+}
+
 .panel-1 {
 	display: flex;
 	flex-direction: column;
